frontend/test/should_pass/retype_101.grg
using retype_model_002;

rule r {
	a:Node;
	b:Node;
	
	a -x:TYPE1-> b;

	replace {
		a -y:TYPE2<x>-> b;
		b -z:typeof(x)-> a;
	}
}

